# docs/swagger.yaml
@@ -1,94 +1,6 @@
 basePath: /api
 definitions:
-  damagerequest.DamageRequest:
-    properties:
-      ap:
-        description: Armor penetration
-        type: integer
-      attacks_string:
-        description: e.g., "D6+2"
-        type: string
-      bs:
-        description: Ballistic Skill
-        type: integer
-      d:
-        description: Damage, e.g., "D3", "2"
-        type: string
-      devastating_wounds:
-        type: boolean
-      feel_no_pain:
-        description: Feel No Pain, optional
-        type: integer
-      hit_modifier:
-        type: integer
-      hit_reroll:
-        $ref: '#/definitions/damagerequest.RerollType'
-      invulnerable:
-        description: Pointers (*int) are used for optional fields. If the field is
-          omitted in JSON, the pointer will be nil.
-        type: integer
-      lethal_hits:
-        type: boolean
-      num_models:
-        type: integer
-      request_uuid:
-        description: RequestUUID is populated by server middleware and is not required
-          from clients.
-        type: string
-      s:
-        description: Strength
-        type: integer
-      save:
-        description: Target Save
-        type: integer
-      save_modifier:
-        type: integer
-      t:
-        description: Target Toughness
-        type: integer
-      target_wounds_per_model:
-        description: How many wounds each model has
-        type: integer
-      torrent:
-        type: boolean
-      wound_modifier:
-        type: integer
-      wound_reroll:
-        $ref: '#/definitions/damagerequest.RerollType'
-    type: object
-  damagerequest.DamageResponse:
-    properties:
-      average_destroyed:
-        type: number
-      average_hits:
-        type: number
-      destroyed_distribution:
-        additionalProperties:
-          format: float64
-          type: number
-        type: object
-      hits_distribution:
-        additionalProperties:
-          format: float64
-          type: number
-        type: object
-      message:
-        type: string
-      pens_distribution:
-        additionalProperties:
-          format: float64
-          type: number
-        type: object
-      request_uuid:
-        description: RequestUUID echoes the request UUID assigned by middleware.
-        type: string
-      wounds_distribution:
-        additionalProperties:
-          format: float64
-          type: number
-        type: object
-    type: object
-  damagerequest.RerollType:
+  calculator.RerollType:
     enum:
     - 0
     - 1
@@ -98,6 +10,128 @@ definitions:
     - RerollNone
     - RerollOnes
     - RerollFail
+  damagerequest.AttackerDTO:
+    properties:
+      ap:
+        type: integer
+      attacks_string:
+        type: string
+      blast:
+        description: Weapon Keywords
+        type: boolean
+      bs:
+        type: integer
+      d:
+        type: string
+      devastating_wounds:
+        type: boolean
+      hit_modifier:
+        description: Modifiers (e.g., -1 to hit is -1)
+        type: integer
+      lethal_hits:
+        type: boolean
+      num_models:
+        type: integer
+      s:
+        type: integer
+      sustained_hits:
+        type: integer
+      torrent:
+        type: boolean
+      wound_modifier:
+        type: integer
+    type: object
+  damagerequest.DamageRequestDTO:
+    properties:
+      attacker:
+        $ref: '#/definitions/damagerequest.AttackerDTO'
+      rules:
+        $ref: '#/definitions/damagerequest.RulesDTO'
+      target:
+        $ref: '#/definitions/damagerequest.TargetDTO'
+    type: object
+  damagerequest.DamageResponseDTO:
+    properties:
+      distributions:
+        $ref: '#/definitions/damagerequest.DistributionsDTO'
+      message:
+        type: string
+      request_uuid:
+        type: string
+      summary:
+        allOf:
+        - $ref: '#/definitions/damagerequest.SummaryDTO'
+        description: Grouped or flattened as you prefer, but separate from the core
+    type: object
+  damagerequest.DistributionsDTO:
+    properties:
+      damage:
+        additionalProperties:
+          format: float64
+          type: number
+        type: object
+      hits:
+        additionalProperties:
+          format: float64
+          type: number
+        type: object
+      models_destroyed:
+        additionalProperties:
+          format: float64
+          type: number
+        type: object
+      saves_failed:
+        additionalProperties:
+          format: float64
+          type: number
+        type: object
+      wounds:
+        additionalProperties:
+          format: float64
+          type: number
+        type: object
+    type: object
+  damagerequest.RulesDTO:
+    properties:
+      critical_hit_threshold:
+        description: Thresholds allow for rules like "Critical hits on a 5+"
+        type: integer
+      critical_wound_threshold:
+        type: integer
+      hit_reroll:
+        $ref: '#/definitions/calculator.RerollType'
+      save_modifier:
+        type: integer
+      save_reroll:
+        $ref: '#/definitions/calculator.RerollType'
+      wound_reroll:
+        $ref: '#/definitions/calculator.RerollType'
+    type: object
+  damagerequest.SummaryDTO:
+    properties:
+      average_destroyed:
+        type: number
+      average_hits:
+        type: number
+    type: object
+  damagerequest.TargetDTO:
+    properties:
+      cover:
+        type: boolean
+      feel_no_pain:
+        description: FNP (e.g., 6)
+        type: integer
+      invulnerable:
+        type: integer
+      model_count:
+        type: integer
+      save:
+        type: integer
+      t:
+        type: integer
+      wounds_per_model:
+        type: integer
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -109,7 +143,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: Calculates statistical damage based on input parameters
+      description: Calculates statistical damage based on input parameters like attack
+        rolls, modifiers, and defense stats.
       parameters:
       - description: Request UUID
         in: header
@@ -120,14 +155,20 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/damagerequest.DamageRequest'
+          $ref: '#/definitions/damagerequest.DamageRequestDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/damagerequest.DamageResponse'
+            $ref: '#/definitions/damagerequest.DamageResponseDTO'
+        "400":
+          description: Invalid input payload
+          schema:
+            additionalProperties:
+              type: string
+            type: object
       summary: Calculate Damage
       tags:
       - damage
